Determine if we have useFastJITPermissions on arm64e at runtime instead of hardcoding it as always enabled https://bugs.webkit.org/show_bug.cgi?id=223388 <rdar://74819266>

Reviewed by Mark Lam.

Source/JavaScriptCore:

* assembler/FastJITPermissions.h:
(threadSelfRestrictRWXToRW):
(threadSelfRestrictRWXToRX):
(useFastJITPermissions): Deleted.
(fastJITPermissionsIsSupported): Deleted.
* assembler/LinkBuffer.cpp:
(JSC::LinkBuffer::copyCompactAndLinkCode):
* jit/ExecutableAllocator.cpp:
(JSC::initializeJITPageReservation):
* jit/ExecutableAllocator.h:
(JSC::performJITMemcpy):
* runtime/JSCConfig.h:

Source/WTF:

* wtf/PlatformEnableCocoa.h:
* wtf/PlatformUse.h:


Canonical link: https://commits.webkit.org/235441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274602 268f45cc-cd09-0410-ab3c-d52691b4dbfc