Source/JavaScriptCore/runtime/JSCConfig.h
@@ -64,6 +64,8 @@ struct Config {
     bool restrictedOptionsEnabled;
     bool jitDisabled;
 
+    bool useFastJITPermissions;
+
     // The following HasBeenCalled flags are for auditing call_once initialization functions.
     bool initializeHasBeenCalled;
 
